Fix color-contrast issues in Patient Summary page

--- a/packages/react-mutation-mapper/src/component/column/mutationType.module.scss
+++ b/packages/react-mutation-mapper/src/component/column/mutationType.module.scss
@@ -23,6 +23,6 @@
     font-weight: bold;
 }
 .splice {
-    color: #e5802b;
+    color: #9e5f00;
     font-weight: bold;
 }
