--- a/packages/react-variant-view/src/component/headerAnnotation/HeaderAnnotation.module.scss
+++ b/packages/react-variant-view/src/component/headerAnnotation/HeaderAnnotation.module.scss
@@ -98,6 +98,6 @@
     font-weight: bold;
 }
 .splice {
-    color: #e5802b;
+    color: #9e5f00;
     font-weight: bold;
 }
