--- a/src/shared/components/mutationTable/column/mutationType.module.scss
+++ b/src/shared/components/mutationTable/column/mutationType.module.scss
@@ -23,7 +23,7 @@
     font-weight: bold;
 }
 .splice {
-    color: #e5802b;
+    color: #9e5f00;
     font-weight: bold;
 }
 
